fix: Fix l'alignement du titre et de son complément

--- a/src/client/components/features/Europe/EmploiEnEuropeContent.module.scss
+++ b/src/client/components/features/Europe/EmploiEnEuropeContent.module.scss
@@ -31,6 +31,15 @@
     > .hero {
       padding: 0;
       margin-bottom: 1.5rem;
+
+      // FIXME (GAFI 21-09-2023): Travail à faire au niveau du composant Hero pour uniformiser l'alignement
+      text-align: start;
+      & * {
+        display: inline;
+      }
+      & .complement {
+        white-space: nowrap;
+      }
     }
     > a {
       display: flex;
